--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@
   margin: 0 auto;
   text-align: center;
 }
+
+.app {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  margin-top: 1rem;
+}
